--- a/TTV48Schmalkalden/Views/Contact/Index.cshtml
+++ b/TTV48Schmalkalden/Views/Contact/Index.cshtml
@@ -9,7 +9,7 @@
         <iframe id="osm" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.openstreetmap.org/export/embed.html?bbox=10.465600848328906%2C50.72084674059581%2C10.472499489915212%2C50.722945550852366&amp;layer=mapnik&amp;marker=50.721896157474646%2C10.469050169122056" style="border: 1px solid black"></iframe><br /><small><a href="https://www.openstreetmap.org/?mlat=50.72190&amp;mlon=10.46905#map=18/50.72190/10.46905">Größere Karte anzeigen</a></small>
     </section>
 
-    <section id="team" class="light-bg">
+    <section id="" class="light-bg">
         <div class="container inner-top-sm">
 
             <div class="row">
@@ -98,7 +98,7 @@
 
             </div><!-- /.row -->
 
-            <div class="row text-center">
+            <div id="contacts" class="row text-center">
 
                 <div class="col-md-6 inner-bottom-sm inner-left inner-right">
                     <figure class="member">
