--- a/TTV48Schmalkalden/Views/Contact/Index.cshtml
+++ b/TTV48Schmalkalden/Views/Contact/Index.cshtml
@@ -23,7 +23,7 @@
 
             <div class="row inner-top-sm text-center">
 
-                <div class="col-md-4 inner-bottom-sm inner-left inner-right">
+                <div class="col-md-4 inner-bottom-sm inner-left inner-right onecontact">
                     <figure class="member">
 
                         <div class="">
@@ -48,7 +48,7 @@
                     </figure>
                 </div><!-- /.col -->
 
-                <div class="col-md-4 inner-bottom-sm inner-left inner-right">
+                <div class="col-md-4 inner-bottom-sm inner-left inner-right onecontact">
                     <figure class="member">
 
                         <div class="">
@@ -71,7 +71,7 @@
                     </figure>
                 </div><!-- /.col -->
 
-                <div class="col-md-4 inner-bottom-sm inner-left inner-right">
+                <div class="col-md-4 inner-bottom-sm inner-left inner-right onecontact">
                     <figure class="member">
 
                         <div class="">
@@ -96,11 +96,7 @@
                     </figure>
                 </div><!-- /.col -->
 
-            </div><!-- /.row -->
-
-            <div id="contacts" class="row text-center">
-
-                <div class="col-md-6 inner-bottom-sm inner-left inner-right">
+                <div class="col-md-4 inner-bottom-sm inner-left inner-right onecontact">
                     <figure class="member">
 
                         <div class="">
@@ -126,7 +122,7 @@
                     </figure>
                 </div><!-- /.col -->
 
-                <div class="col-md-6 inner-bottom-sm inner-left inner-right">
+                <div class="col-md-4 inner-bottom-sm inner-left inner-right onecontact">
                     <figure class="member">
 
                         <div class="">
