made description for every site

--- a/TTV48Schmalkalden/Views/Contact/Index.cshtml
+++ b/TTV48Schmalkalden/Views/Contact/Index.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Kontakt";
+    ViewData["Description"] = "Kontaktieren Sie uns. Hier lernen Sie sowohl unsere Kontaktpersonen als auch unsere Lage kennen.";
 }
 
 <main>
