--- a/TTV48Schmalkalden/Views/Home/Index.cshtml
+++ b/TTV48Schmalkalden/Views/Home/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@model TTV48Schmalkalden.Models.NewsOverviewViewModel
 @{
     ViewData["Title"] = "Tischtennis";
+    ViewData["Description"] = "Tischtennis in Schmalkalden! Wir heißen Sie recht herzlich im Tischtennisverein TTV 48 Schmalkalden willkommen &#10084. Hier finden Sie Informationen rund um uns und unsere Ballsportart. Viel Spaß beim Stöbern!";
 }
 
 <!-- ============================================================= HEADER : END ============================================================= -->
