--- a/TTV48Schmalkalden/Views/Shared/_Layout.cshtml
+++ b/TTV48Schmalkalden/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>TTV 48 Schmalkalden - @ViewBag.Title</title>
-    <meta name="description" content="Tischtennis in Schmalkalden! Wir heißen Sie recht herzlich im Tischtennisverein TTV 48 Schmalkalden willkommen &#10084. Hier finden Sie Informationen rund um uns und unsere Ballsportart. Viel Spaß beim Stöbern!">
+    <meta name="description" content="@ViewBag.Description">
     <meta name="keywords" content="Tischtennis, Schmalkalden, Sport, Verein, Freizeit, Spaß">
     <meta name="author" content="Dominik Weder">
     <meta name="robots" content="index,follow" />
