--- a/TTV48Schmalkalden/Views/Support/Index.cshtml
+++ b/TTV48Schmalkalden/Views/Support/Index.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Unterstützer und Freunde";
+    ViewData["Description"] = "Lernen Sie sowohl die Unterstützer und Freunde als auch die Holz- und Belagstestmöglichkeiten des Tischtennisvereins in Schmalkalden kennen.";
 }
 
 <section id="portfolio" class="light-bg">
