--- a/TTV48Schmalkalden/Views/News/Index.cshtml
+++ b/TTV48Schmalkalden/Views/News/Index.cshtml
@@ -3,6 +3,7 @@
 @inject IHttpContextAccessor HttpContextAccessor
 @{
     ViewData["Title"] = "News";
+    ViewBag["Description"] = "Neuigkeiten und aktuelle Spielberichte rund um den Tischtennissport in Schmalkalden werden Ihnen vom Verein präsentiert.";
 }
 
 <section id="blog" class="light-bg">
