--- a/TTV48Schmalkalden/Views/PrivacyPolicy/Index.cshtml
+++ b/TTV48Schmalkalden/Views/PrivacyPolicy/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@{ 
     ViewData["Title"] = "Datenschutzerklärung";
+    ViewData["Description"] = "Tischtennis in Schmalkalden! Wir heißen Sie recht herzlich im Tischtennisverein TTV 48 Schmalkalden willkommen. Hier kommen Sie zur Datenschutzerklärung.";
 }
 <section class="light-bg">
     <div class="container inner-top inner-bottom-sm">
