--- a/TTV48Schmalkalden/Views/Shared/_Layout.cshtml
+++ b/TTV48Schmalkalden/Views/Shared/_Layout.cshtml
@@ -40,6 +40,8 @@
     <link href="~/lib/fullcalendar/core/main.min.css" rel="stylesheet" />
     <link href="~/lib/fullcalendar/daygrid/main.min.css" />
 
+    <link href="~/lib/tippy.js/tippy.css" rel="stylesheet" />
+
     <link href="~/assets/css/custom.css" rel="stylesheet" />
 </head>
 <body id="top">
